Kubernetes/jmaze-k8s-cilium/longhorn/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
spec:
  hostnames:
    - longhorn.local.julianmaze.com
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: longhorn # name of the gateway listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
          kind: Service
